[project]
name = "langchain-v1-study"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain[google-genai]>=1.2.3",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.1.7",
    "langchain-tavily>=0.2.16",
    "langgraph>=1.0.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
